--- a/PSValidator/Properties/Resources.resx
+++ b/PSValidator/Properties/Resources.resx
@@ -126,4 +126,13 @@
   <data name="ArgumentIsNull" xml:space="preserve">
     <value>The argument is null. Provide a valid value for the argument, and then try running the command again.</value>
   </data>
+  <data name="PathIsNotContainer" xml:space="preserve">
+    <value>PathType.Container was specified, but path '{0}' is not a container object.</value>
+  </data>
+  <data name="PathIsNotLeaf" xml:space="preserve">
+    <value>PathType.Leaf was specified, but path '{0}' is not a leaf object.</value>
+  </data>
+  <data name="PathNotExists" xml:space="preserve">
+    <value>Path '{0}' does not exist.</value>
+  </data>
 </root>
